k8s/orders/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-deployment
  namespace: microstore
  labels:
    app: orders
spec:
  replicas: 2
  selector:
    matchLabels:
      app: orders
  template:
    metadata:
      labels:
        app: orders
    spec:
      containers:
        - name: orders
          image: <TU_REGISTRY>/orders:latest
          ports:
            - containerPort: 5004
          readinessProbe:
            httpGet:
              path: /api/orders
              port: 5004
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/orders
              port: 5004
            initialDelaySeconds: 60
            periodSeconds: 30
