k8s/orders/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-service
  namespace: microstore
  labels:
    app: orders
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 5004
      protocol: TCP
  selector:
    app: orders
